#Author: Yesho Reddipalli
[package]
name = "File-shuffler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

walkdir = "2.3.2"
filetime = "0.2.20"
rand = "0.8.5"
itertools = "0.10.5"
chrono = "0.4.23"
rayon = "1.6.1"
